[tool.poetry]
name = "rhizk-api"
version = "0.1.0"
description = "api for rhizk"
authors = ["jaikumarpr"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
openai = "^1.40.2"
numpy = "^2.0.1"
scipy = "^1.14.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
